2007-10-28  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-dialogs.c: Change edit personal
	information window title to "Personal Information". Fixes bug #490159.
	Change add contact window title to "New Contact", need a capitalized
	'C'. Change edit contact information window title to
	"Edit Contact Information".

2007-10-25  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat.glade: Add Ctr-L accelerator to clear
	the chat. Fixes bug #490125 (Marco Barisione).

2007-10-25  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.glade: Change window title to
	"Contact List", both words should be capitalised according to HIG.
	Fixes bug #490076 (Michael Monreal).

2007-10-25  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.glade: Remove "..." from the
	"Manage Favorites..." menu item. Fixes bug #490086 (Michael Monreal).

2007-10-25  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-images.h:
	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-chat.glade:
	* libempathy-gtk/empathy-log-window.glade:
	* libempathy-gtk/empathy-main-window.glade: Use "document-open-recent"
	icon instead of gtk-justify-left for history icon.
	Fixes bug #490080 (Michael Monreal, Xavier Claessens).

2007-10-25  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.glade: Use "user-info" icon for
	Edit->Personal Information menu item.
	Fixes bug #490079 (Michael Monreal).

2007-10-25  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-log-window.glade: Use the navigation icons in
	the history dialog. Fixes bug #490077 (Michael Monreal).

2007-10-25  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-log-window.glade: Set window title to
	"Previous Conversations". Fixes bug #490075 (Michael Monreal).

2007-10-24  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-chooser.c: