@@ -267,16 +267,17 @@ empathy_smiley_manager_load (EmpathySmileyManager *manager)
 
 	/* From fd.o icon-naming spec */
 	empathy_smiley_manager_add (manager, "face-angel",      "0:-)",  "0:)",  NULL);
+        empathy_smiley_manager_add (manager, "face-cool",       "B-)",   "B)",   NULL);
 	empathy_smiley_manager_add (manager, "face-crying",     ":'(", NULL);
-	empathy_smiley_manager_add (manager, "face-devil-grin", ">:-)",  ">:)",  NULL);
-	empathy_smiley_manager_add (manager, "face-devil-sad",  ">:-(",  ">:(",  NULL);
-	empathy_smiley_manager_add (manager, "face-glasses",    "B-)",   "B)",   NULL);
+	empathy_smiley_manager_add (manager, "face-devilish",   ">:-)",  ">:)",  NULL);
+        empathy_smiley_manager_add (manager, "face-embarrassed",":-[",   ":[",   NULL);
 	empathy_smiley_manager_add (manager, "face-kiss",       ":-*",   ":*",   NULL);
 	empathy_smiley_manager_add (manager, "face-monkey",     ":-(|)", ":(|)", NULL);
 	empathy_smiley_manager_add (manager, "face-plain",      ":-|",   ":|",   NULL);
+        empathy_smiley_manager_add (manager, "face-raspberry",  ":-P",   ":P",	 ":-p", ":p", NULL);
 	empathy_smiley_manager_add (manager, "face-sad",        ":-(",   ":(",   NULL);
 	empathy_smiley_manager_add (manager, "face-smile",      ":-)",   ":)",   NULL);
-	empathy_smiley_manager_add (manager, "face-smile-big",  ":-D",   ":D",   NULL);
+	empathy_smiley_manager_add (manager, "face-smile-big",  ":-D",   ":D",   ":-d", ":d", NULL);
 	empathy_smiley_manager_add (manager, "face-smirk",      ":-!",   ":!",   NULL);
 	empathy_smiley_manager_add (manager, "face-surprise",   ":-0",   ":0",   NULL);
 	empathy_smiley_manager_add (manager, "face-wink",       ";-)",   ";)",   NULL);
